--- a/site/fragments/site-layout.html
+++ b/site/fragments/site-layout.html
@@ -1,2 +1,2 @@
-<div id="topbarArea"></div>
-<div id="contentArea">Loading...</div>
+<nav id="topbarArea"></nav>
+<div id="contentArea" class="apc-container">Loading...</div>
